--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p class="header">Camera</p>
       <select class="cameradropdown" id="cameraSelect">
         <option value="default">Default Camera</option>
-        <option value="xe_1">RB19 1</option>
+        <option value="xe_1">borgor</option>
       </select>
       <p class="header">Linh tinh</p>
       <a href="https://github.com/tadcouq/3dgiuaky.tdcq.me">credit</a>
