--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <select class="cameradropdown" id="cameraSelect">
         <option value="default">Default Camera</option>
         <option value="xe_1">borgor</option>
+        <option value="xe_2">borgor again</option>
       </select>
       <p class="header">Linh tinh</p>
       <a href="https://github.com/tadcouq/3dgiuaky.tdcq.me">credit</a>
